@@ -21,10 +21,10 @@
   <artifactId>org.eclipse.scout.jswidgets.rest</artifactId>
 
   <dependencies>
-    <!-- Scout RS -->
+    <!-- Scout API -->
     <dependency>
       <groupId>org.eclipse.scout.rt</groupId>
-      <artifactId>org.eclipse.scout.rt.rest</artifactId>
+      <artifactId>org.eclipse.scout.rt.api</artifactId>
     </dependency>
     <!-- JAX-RS Jersey -->
     <dependency>
